# chess-analysis-server

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/notes/: Plans.md  codebase-structure.md  elombe.excalidraw  scaffolding-prompt.txt
backend/src/: config.py  main.py
backend/src/api/: __init__.py  routes.py
backend/src/core/: celery.py  database.py  neo4j.py
backend/src/utils/: __init__.py  decorators.py
notes/: Chesslytics Advanced.txt  Chesslytics Main.txt
