[project]
name = "elombe"
version = "0.1.1"
description = "But When In Cameroon My Babies Call Me Big Olembe"
authors = [
    {name = "Tariq Williams"}
]
license = {text = "IDK"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "neo4j (>=5.20.0,<6.0.0)",
    "kombu (>=5.4.0,<6.0.0)",
]
